@@ -65,7 +65,7 @@ descriptives after discarding all info above \code{cutFreq}.
 Recommended if the original sampling rate varies across different analyzed
 audio files}
 
-\item{nFormants}{the number of formants to extract per FFT frame. Calls
+\item{nFormants}{the number of formants to extract per STFT frame. Calls
 \code{\link[phonTools]{findformants}} with default settings}
 
 \item{pitchMethods}{methods of pitch estimation to consider for determining
@@ -198,30 +198,34 @@ individual pitch candidates. Set to \code{NULL} or \code{NA} to suppress}
 \value{
 If \code{summary = TRUE}, returns a dataframe with one row and three
   columns per acoustic variable (mean / median / SD). If \code{summary =
-  FALSE}, returns a dataframe with one row per FFT frame and one column per
+  FALSE}, returns a dataframe with one row per STFT frame and one column per
   acoustic variable. The best guess at the pitch contour considering all
   available information is stored in the variable called "pitch". In
   addition, the output contains pitch estimates by separate algorithms
   included in \code{pitchMethods} and a number of other acoustic descriptors:
-  \describe{\item{time}{time of the middle of each frame (ms)}
-  \item{ampl}{root mean square of amplitude per frame, calculated as
-  sqrt(mean(frame ^ 2))} \item{amplVoiced}{the same as ampl for voiced frames
-  and NA for unvoiced frames} \item{dom}{lowest dominant frequency band (Hz)
-  (see "Pitch tracking methods / Dominant frequency" in the vignette)}
-  \item{entropy}{Weiner entropy of the spectrum of the current frame. Close
-  to 0: pure tone or tonal sound with nearly all energy in harmonics; close
-  to 1: white noise} \item{f1_freq, f1_width, ...}{the frequency and
-  bandwidth of the first nFormants formants per FFT frame, as calculated by
-  phonTools::findformants with default settings} \item{harmonics}{the amount
-  of energy in upper harmonics, namely the ratio of total spectral mass
-  above 1.25 x F0 to the total spectral mass below 1.25 x F0 (dB)}
-  \item{HNR}{harmonics-to-noise ratio (dB), a measure of harmonicity returned
-  by soundgen:::getPitchAutocor (see "Pitch tracking methods /
-  Autocorrelation"). If HNR = 0 dB, there is as much energy in harmonics as
-  in noise} \item{loudness}{subjective loudness, in sone, corresponding to
-  the chosen SPL_measured - see \code{\link{getLoudness}}}
-  \item{medianFreq}{50th quantile of the frame's spectrum}
-  \item{peakFreq}{the frequency with maximum spectral power (Hz)}
+  \describe{
+  \item{duration}{total duration, s}
+  \item{duration_noSilence}{duration from the beginning of the first
+  non-silent STFT frame to the end of the last non-silent STFT frame, s (NB:
+  depends strongly on \code{windowLength} and \code{silence} settings)}
+  \item{time}{time of the middle of each frame (ms)} \item{ampl}{root mean
+  square of amplitude per frame, calculated as sqrt(mean(frame ^ 2))}
+  \item{amplVoiced}{the same as ampl for voiced frames and NA for unvoiced
+  frames} \item{dom}{lowest dominant frequency band (Hz) (see "Pitch tracking
+  methods / Dominant frequency" in the vignette)} \item{entropy}{Weiner
+  entropy of the spectrum of the current frame. Close to 0: pure tone or
+  tonal sound with nearly all energy in harmonics; close to 1: white noise}
+  \item{f1_freq, f1_width, ...}{the frequency and bandwidth of the first
+  nFormants formants per STFT frame, as calculated by phonTools::findformants
+  with default settings} \item{harmonics}{the amount of energy in upper
+  harmonics, namely the ratio of total spectral mass above 1.25 x F0 to the
+  total spectral mass below 1.25 x F0 (dB)} \item{HNR}{harmonics-to-noise
+  ratio (dB), a measure of harmonicity returned by soundgen:::getPitchAutocor
+  (see "Pitch tracking methods / Autocorrelation"). If HNR = 0 dB, there is
+  as much energy in harmonics as in noise} \item{loudness}{subjective
+  loudness, in sone, corresponding to the chosen SPL_measured - see
+  \code{\link{getLoudness}}} \item{medianFreq}{50th quantile of the frame's
+  spectrum} \item{peakFreq}{the frequency with maximum spectral power (Hz)}
   \item{peakFreqCut}{the frequency with maximum spectral power below cutFreq
   (Hz)} \item{pitch}{post-processed pitch contour based on all F0 estimates}
   \item{pitchAutocor}{autocorrelation estimate of F0}
@@ -231,7 +235,7 @@ If \code{summary = TRUE}, returns a dataframe with one row and three
   center of gravity of the frame’s spectrum, first spectral moment (Hz)}
   \item{specCentroidCut}{the center of gravity of the frame’s spectrum below
   cutFreq} \item{specSlope}{the slope of linear regression fit to the
-  spectrum below cutFreq} \item{voiced}{is the current FFT frame voiced? TRUE
+  spectrum below cutFreq} \item{voiced}{is the current STFT frame voiced? TRUE
   / FALSE}
 }
 }
